# AxonTask

./: .env.example  .env.test  .gitignore  API_DESIGN.md  CLA.md  CLAUDE 2.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  DATABASE_DESIGN.md  DEPLOYMENT.md  DESIGN.md  FRONTEND_DESIGN.md  LICENSE  LICENSE-BSL.md  README.md  ROADMAP.md  SETUP.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  run-tests.sh
.github/: dependabot.yml
.github/workflows/: auto-update.yml  ci.yml  pr-checks.yml  release.yml
axontask-api/: Cargo.toml
axontask-api/src/: app.rs  config.rs  error.rs  lib.rs  main.rs
axontask-api/src/middleware/: mod.rs  rate_limit.rs  security.rs
axontask-api/src/routes/: api_keys.rs  auth.rs  health.rs  mod.rs
axontask-api/src/routes/mcp/: cancel_task.rs  get_status.rs  mod.rs  resume_task.rs  start_task.rs  stream_task.rs
axontask-api/tests/: integration_test.rs
axontask-api/tests/common/: mod.rs
axontask-shared/: Cargo.toml
axontask-shared/src/: lib.rs  quota.rs
axontask-shared/src/auth/: api_key.rs  authorization.rs  jwt.rs  middleware.rs  mod.rs  password.rs
axontask-shared/src/db/: migrations.rs  mod.rs  pool.rs
axontask-shared/src/events/: mod.rs  serialization.rs
axontask-shared/src/models/: api_key.rs  membership.rs  mod.rs  task.rs  task_event.rs  tenant.rs  usage.rs  user.rs  webhook.rs
axontask-shared/src/redis/: client.rs  gap_detection.rs  heartbeat.rs  metrics.rs  mod.rs  stream_reader.rs  stream_writer.rs
axontask-shared/tests/: db_migrations_tests.rs  db_pool_tests.rs
axontask-worker/: Cargo.toml
axontask-worker/src/: control.rs  events.rs  lib.rs  main.rs  orchestrator.rs  queue.rs  timeout.rs
axontask-worker/src/adapters/: adapter_trait.rs  mock.rs  mod.rs
migrations/: 20250103000000_init_schema.down.sql  20250103000000_init_schema.sql
