[package]
name = "axontask-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

# Cryptography
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Validation
validator = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
