[package]
name = "axontask-worker"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "axontask-worker"
path = "src/main.rs"

[dependencies]
# Internal
axontask-shared = { path = "../axontask-shared" }

# Async
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Database
sqlx = { workspace = true }

# Redis
redis = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Configuration
config = { workspace = true }
dotenvy = { workspace = true }

# Cryptography
sha2 = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
